<resources>
    <string name="app_name">MyStore</string>

    <string name="txt_login">Log In</string>
    <string name="txt_create_account">Create new account</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_home">Home</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_account">Account</string>
    <string name="txt_more">More</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_password">Password</string>
    <string name="txt_search_product">Search product</string>
    <string name="title_home">Home</string>

    <string name="txt_currency_php">₱</string>
    <string name="txt_currency_php_w_val">₱%s</string>
    <string name="txt_currency_php_sample1">₱10,000.00</string>
    <string name="txt_currency_php_sample2">₱50.00</string>
    <string name="txt_product_sample1">Acer Aspire XC-730 Intel J3355 CeleronAcer Aspire XC-730 Intel J3355 Celeron</string>
    <string name="txt_sort_by">Sort By</string>
    <string name="txt_price">Price</string>
    <string name="txt_min">Min</string>
    <string name="txt_max">Max</string>
    <string name="txt_manufacturer">Manufacturer</string>

    <string name="txt_check_out">Check Out</string>
    <string name="txt_shipping_fee_w_colon">Shipping Fee:</string>
    <string name="txt_total_w_colon">Total:</string>
    <string name="txt_all_items">All Items</string>
    <string name="txt_wishlist">Wishlist</string>
    <string name="txt_scan">Scan</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_with_ellipsis">%s...</string>
    <string name="txt_rate_sample1">4.7</string>
    <string name="txt_rate_max_sample1">/5</string>
    <string name="txt_product_details">Product Details</string>
    <string name="txt_bullet_description">\u2022 %s</string>
    <string name="txt_reviews_w_colon">Reviews:</string>
    <string name="txt_product_details_w_colon">Product Details:</string>
    <string name="txt_add_to_cart">Add to Cart</string>
    <string name="txt_view_all">View All</string>
    <string name="txt_policies">Policies</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="txt_about">About</string>
    <string name="txt_policy_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempus arcu nec quam rutrum euismod.
        Integer consequat, tortor non tristique semper, odio lorem tempor nulla, sed mollis turpis lorem vitae velit. Fusce turpis risus,
        consectetur cursus dolor id, porta congue risus. Maecenas ut lectus erat. Pellentesque justo quam, tristique vitae augue eu,
        venenatis pulvinar justo. Aenean commodo egestas tellus, in ornare elit vestibulum quis. Quisque ac porta diam. \n\nVivamus lacus eros,
        vehicula ac purus quis, cursus consectetur nunc. Cras volutpat ullamcorper congue. Donec sit amet enim vitae libero cursus rhoncus sed vitae tellus.
        Morbi sapien ex, volutpat posuere dignissim ac, commodo id arcu. Quisque semper consequat nibh sit amet placerat. Nullam finibus pretium mi, eget varius
        lorem facilisis et. Cras tempor vestibulum risus, eget malesuada diam.  Curabitur sit amet tincidunt elit, et volutpat lectus. Pellentesque tortor lorem,
        sagittis in augue ut, semper fermentum nisi. Ut eleifend neque eu nulla mollis, in luctus nunc venenatis. Vestibulum iaculis arcu nec neque placerat luctus.
        Praesent pellentesque rhoncus auctor. Vivamus auctor dictum orci at porttitor. Morbi sagittis mi vitae ipsum rutrum luctus. Donec non neque nec lorem volutpat
        tempus a sit amet nisi. Vestibulum vel hendrerit orci, id venenatis enim. Nulla porttitor quis sapien vitae scelerisque. Maecenas semper lacinia ex, quis
        placerat libero. Cras finibus finibus metus, vel faucibus libero feugiat at. Donec maximus mattis nisl, scelerisque viverra ex cursus vitae.\n\n
        Curabitur efficitur semper quam, vitae euismod orci viverra at. Cras vehicula non nibh in dignissim. Aenean mattis massa sed odio fringilla, sit amet
        auctor sapien laoreet. Quisque congue enim ut lacinia malesuada. Nam id massa vitae nisl aliquet euismod eu at augue. Pellentesque convallis a lacus vel
        efficitur. Donec enim metus, placerat eu libero tincidunt, sagittis auctor erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
        ridiculus mus. Maecenas eu lectus nibh. Integer posuere lacus ut odio suscipit porttitor. Pellentesque mauris risus, consectetur id pulvinar non, fermentum
        et nunc. Duis sed est sapien. Etiam placerat iaculis felis, vitae molestie eros luctus quis. Nunc hendrerit malesuada arcu, sit amet laoreet sapien rutrum eu.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n\n  Morbi tempor, nibh non venenatis placerat, est orci dictum sapien, ac ultricies tellus massa eu
        arcu. Nunc ac odio nec purus tempus pretium id eget lacus. Mauris egestas tortor sit amet nisi hendrerit sollicitudin. Aenean blandit lacinia risus, eu
        tristique enim fermentum non. Phasellus sit amet augue gravida, auctor urna bibendum, sagittis arcu. Nulla pulvinar, diam vitae laoreet ultrices, enim risus
        imperdiet sapien, sit amet mattis nibh sapien quis dolor. Cras ultricies sem id interdum luctus. Aenean eget nisi in lacus tempus consequat.
        Nullam convallis diam ac augue euismod tincidunt. Phasellus non nunc feugiat, luctus nisi in, sagittis nunc. Sed dapibus neque et diam faucibus tristique.
        Fusce id iaculis dolor. In hac habitasse platea dictumst. Proin eu nulla nunc. Praesent condimentum elit non orci vestibulum tempus. Nulla varius faucibus
        urna, eget tincidunt eros. Sed sit amet posuere nunc, ut rutrum ligula. Integer porttitor neque vitae mi volutpat, eu consequat lacus facilisis. Fusce viverra
        libero quis erat mollis placerat. Proin dapibus tincidunt porttitor. Vestibulum id nisl congue, molestie neque efficitur, auctor eros. Suspendisse pellentesque
        lacus et metus fringilla sollicitudin. Duis tincidunt lectus et eros vulputate commodo. Ut ac magna sem. \n\n\n\n</string>
    <string name="txt_send">Send</string>
    <string name="txt_send_a_message">Send a message</string>
    <string name="app_about">Welcome to my app!\n\nThis is to showcase my expertise in Android Development.</string>
    <string name="title_more">More</string>
    <string name="title_account">Account</string>
    <string name="title_cart">Cart</string>
    <string name="title_policy">Policy</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_about">About</string>

</resources>
