<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.FilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha=".4">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_sort_by"
            android:textSize="14sp"/>

        <Spinner
            android:id="@+id/spn_sort"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_price"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/fld_min"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:paddingStart="@dimen/margin_normal"
            android:background="@drawable/field_white_dark_rad_small"
            android:hint="@string/txt_min"/>

        <EditText
            android:id="@+id/fld_max"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:paddingStart="@dimen/margin_normal"
            android:background="@drawable/field_white_dark_rad_small"
            android:hint="@string/txt_max"/>

        <TextView
            android:id="@+id/txt_manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_manufacturer"
            android:textSize="14sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcy_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            tools:listitem="@layout/layout_category_item"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:spanCount="4"/>

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/field_accent"
            android:text="@string/txt_apply"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>