<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_cart_footer"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txt_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_shipping_fee_w_colon"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txt_fee_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_fee"
            android:layout_marginStart="@dimen/margin_small"
            tools:text="@string/txt_currency_php_sample2"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_fee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_total_w_colon"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txt_total_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_fee"
            app:layout_constraintStart_toEndOf="@id/txt_total"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            tools:text="@string/txt_currency_php_sample1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_check_out"
            android:layout_width="87dp"
            android:layout_height="47dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/field_accent_rad_small"
            android:text="@string/txt_check_out"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>