<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.ProductDetailActivity"
    tools:showIn="@layout/activity_product_detail">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                tools:text="@string/txt_currency_php_sample1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txt_price"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                tools:text="@string/txt_product_sample1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/txt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_normal"
                tools:text="@string/txt_rate_sample1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/txt_rate_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txt_rate"
                android:layout_alignBottom="@+id/txt_rate"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/txt_rate_max_sample1"
                android:textSize="8sp"
                android:textColor="@android:color/black"/>

            <RatingBar
                android:id="@+id/rtb_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:layout_toEndOf="@+id/txt_rate_max"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_normal"
                android:stepSize="1"
                style="?android:attr/ratingBarStyleSmall"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txt_rate"
                android:layout_margin="@dimen/margin_normal"
                android:background="@color/colorDivider"/>

            <TextView
                android:id="@+id/txt_product_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/divider"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/txt_product_details_w_colon"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/txt_product_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txt_product_detail_title"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                tools:text="@string/txt_bullet_description"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/txt_review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txt_product_details"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:text="@string/txt_reviews_w_colon"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_review_title"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_shipping_fee_w_colon"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txt_fee_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_fee"
            android:layout_marginStart="@dimen/margin_small"
            tools:text="@string/txt_currency_php_sample2"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_fee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_total_w_colon"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/txt_total_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_fee"
            app:layout_constraintStart_toEndOf="@id/txt_total"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            tools:text="@string/txt_currency_php_sample1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_check_out"
            android:layout_width="87dp"
            android:layout_height="37dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/field_accent_rad_small"
            android:text="@string/txt_check_out"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>