<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/img_header"
            android:scaleType="fitXY"/>

        <ImageView
            android:layout_width="219dp"
            android:layout_height="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/img_header"
            android:layout_marginBottom="50dp"
            android:src="@drawable/app_logo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fld_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_header"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal">

            <EditText
                android:id="@+id/fld_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/margin_normal"
                android:translationY="4dp"
                android:background="@drawable/field_white_dark"
                android:hint="@string/txt_email_address"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fld_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fld_layout_email"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:paddingTop="10dp"
            app:hintAnimationEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/fld_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_normal"
                android:translationY="4dp"
                android:background="@drawable/field_white_dark"
                android:hint="@string/txt_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fld_layout_password"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/field_accent"
            android:text="@string/txt_login"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/txt_create_account"
            android:textColor="@color/colorTxtBlack"/>

        <TextView
            android:id="@+id/txt_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_register"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/colorAccent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>